test/Debug/Errors/UnclosedParenthesis.k.proof
 - (error) (UnclosedParenthesis.k:3) ')' is expected (probably before indent)
Q.E.D.
